--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -48,10 +48,11 @@
   <h3>
   <a name="posts" class="anchor" href="#posts"><span class="octicon octicon-link"></span></a>Recent Posts</h3>
 
-  <div>
+  <div class="posts">
     {% for post in site.posts %}
         <hr>
-        <p>{{ post.title }}</p>
+        <h3>{{ post.title }}</h3>
+        <p>{{ post.date | date: '%B %d, %Y' }}</p>
         <p>{{ post.content }}</p>
     {% endfor %}
   </div>
