--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
-    <h1>Norfolkjs.github.io</h1>
-    <h2>Blog for Norfolk.js</h2>
+    <h1>Norfolk.js</h1>
+    <h2>Javascript meetup group in Norfolk, VA</h2>
 
     <section id="downloads">
       <a href="https://github.com/norfolkjs" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
