fixed links and added sponsorship --fixed

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -48,15 +48,20 @@
       <span class="octicon octicon-link">
     </span></a>Want to Sponsor a meetup or Speak?
   </h3>
+  <hr>
   <p>Contact the organizers</p>
-  <p>Travis Webb<a href="mailto: travis@tjwebb.com?subject=NorfolkJS"
-    class="user-mention">@travis@traviswebb.com</a>
-    Tweet us: <a href="https://twitter.com/traviswebbusa"
+  <p>Travis Webb</p>
+   Github
+  <a href="http://github.com/tjwebb"
+    class="user-mention">@tjwebb</a>
+   Twitter : <a href="https://twitter.com/traviswebbusa"
     class="user-mention">@traviswebbusa</a>
   </p>
-  <p>Linda Nichols<a href="mailto:lynnaloo@gmail.com?subject=NorfolkJS"
-    class="user-mention">@lynnaloo@gmail.com</a>
-    Tweet us: <a href="https://twitter.com/lynnaloo"
+  <p>Linda Nichols </p>
+  <a href="http://github.com/lynnaloo"
+    class="user-mention"></a>
+     Github: <a href="https://github.com/lynnaloo">@lynnaloo</a>
+     Twitter: <a href="https://twitter.com/lynnaloo"
     class="user-mention">@lynnaloo</a>
   </p>
 
