--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -39,11 +39,26 @@
     </span></a>Contact
   </h3>
 
-  <p>Tweet us: <a href="https://github.com/norfolkjs"
+  <p>Tweet us: <a href="https://twitter.com/norfolkjs"
     class="user-mention">@norfolkjs</a>
   </p>
 
-  <br>
+  <h3>
+    <a name="sponsor" class="anchor" href="#sponsor">
+      <span class="octicon octicon-link">
+    </span></a>Want to Sponsor a meetup or Speak?
+  </h3>
+  <hr>
+  <p>Contact the organizers</p>
+  <p>Travis Webb</p>
+   Github: <a href="http://github.com/tjwebb" class="user-mention">@tjwebb</a>
+   Twitter: <a href="https://twitter.com/traviswebbusa" class="user-mention">@traviswebbusa</a>
+  </p>
+  <p>
+  <p>Linda Nichols </p>
+     Github: <a href="https://github.com/lynnaloo" class="user-mention">@lynnaloo</a>
+     Twitter: <a href="https://twitter.com/lynnaloo" class="user-mention">@lynnaloo</a>
+  </p>
 
   <h3>
   <a name="posts" class="anchor" href="#posts"><span class="octicon octicon-link"></span></a>Recent Posts</h3>
