Added post for February meetup

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -26,6 +26,7 @@
 
   <p>We want to get local developers together to consume pizza and beer and talk about anything and everything JavaScript.</p>
 
+  <br>
   <h3>
   <a name="meetups" class="anchor" href="#meetups"><span class="octicon octicon-link">
   </span></a>Meetups</h3>
@@ -33,6 +34,7 @@
   <p><a href="http://www.meetup.com/norfolkjs">
     http://www.meetup.com/norfolkjs</a></p>
 
+  <br>
   <h3>
     <a name="contact" class="anchor" href="#contact">
       <span class="octicon octicon-link">
@@ -43,13 +45,14 @@
     class="user-mention">@norfolkjs</a>
   </p>
 
+  <br>
   <h3>
     <a name="sponsor" class="anchor" href="#sponsor">
       <span class="octicon octicon-link">
     </span></a>Want to Sponsor a meetup or Speak?
   </h3>
-  <hr>
-  <p>Contact the organizers</p>
+
+  <p>Contact the organizers:</p>
   <p>Travis Webb</p>
    Github: <a href="http://github.com/tjwebb" class="user-mention">@tjwebb</a>
    Twitter: <a href="https://twitter.com/traviswebbusa" class="user-mention">@traviswebbusa</a>
@@ -60,6 +63,7 @@
      Twitter: <a href="https://twitter.com/lynnaloo" class="user-mention">@lynnaloo</a>
   </p>
 
+  <br>
   <h3>
   <a name="posts" class="anchor" href="#posts"><span class="octicon octicon-link"></span></a>Recent Posts</h3>
 
@@ -69,6 +73,7 @@
         <h3>{{ post.title }}</h3>
         <p>{{ post.date | date: '%B %d, %Y' }}</p>
         <p>{{ post.content }}</p>
+        <br>
     {% endfor %}
   </div>
 
