Added ninja image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <header>
   <div class="container">
+    <img src="../images/ninjacat_150.png">
     <h1>Norfolk.js</h1>
     <h2>Javascript meetup group in Norfolk, VA</h2>
 
