Changed Javascript capitalization

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <img src="../images/ninjacat_150.png">
     <h1>Norfolk.js</h1>
-    <h2>Javascript meetup group in Norfolk, VA</h2>
+    <h2>JavaScript meetup group in Norfolk, VA</h2>
 
     <section id="downloads">
       <a href="https://github.com/norfolkjs" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
