nested layouts to allow for static about and contact pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,7 @@
 <header>
   <div class="container">
-    <img src="../images/ninjacat_150.png">
+    <img src="/images/ninjacat_150.png">
     <h1>Norfolk.js</h1>
     <h2>JavaScript meetup group in Norfolk, VA</h2>
-
-    <section id="downloads">
-      <a href="https://github.com/norfolkjs" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-    </section>
   </div>
 </header>
