--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -4,11 +4,10 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen" />
 
-    <title>Norfolk.js</title>
+    <title>{{page.title}}</title>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -26,55 +25,7 @@
 
 <div class="container">
   <section id="main_content">
-    <h3>
-      <a name="about" class="anchor" href="#about">
-        <span class="octicon octicon-link"></span></a>About
-    </h3>
-
-  <p>Norfolk.js is a JavaScript development user group in Norfolk, VA.</p>
-
-  <p>We want to get local developers together to consume pizza and beer and talk about anything and everything JavaScript.</p>
-
-  <br>
-  <h3>
-  <a name="meetups" class="anchor" href="#meetups"><span class="octicon octicon-link">
-  </span></a>Meetups</h3>
-
-  <p><a href="http://www.meetup.com/norfolkjs">
-    http://www.meetup.com/norfolkjs</a></p>
-
-  <br>
-  <h3>
-    <a name="contact" class="anchor" href="#contact">
-      <span class="octicon octicon-link">
-    </span></a>Want to sponsor a meetup or speak?
-  </h3>
-
-  <p>Contact us:</p>
-  <p>Travis Webb</p>
-   Github: <a href="http://github.com/tjwebb" class="user-mention">@tjwebb</a>
-   Twitter: <a href="https://twitter.com/traviswebbusa" class="user-mention">@traviswebbusa</a>
-  </p>
-  <p>
-  <p>Linda Nichols </p>
-     Github: <a href="https://github.com/lynnaloo" class="user-mention">@lynnaloo</a>
-     Twitter: <a href="https://twitter.com/lynnaloo" class="user-mention">@lynnaloo</a>
-  </p>
-
-  <br>
-  <h3>
-  <a name="posts" class="anchor" href="#posts"><span class="octicon octicon-link"></span></a>Recent Posts</h3>
-
-  <div class="posts">
-    {% for post in site.posts %}
-        <hr>
-        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-        <p>{{ post.date | date: '%B %d, %Y' }}</p>
-        <p>{{ post.excerpt }}</p>
-        <br>
-    {% endfor %}
-  </div>
-
+    {{content}}
   </section>
 </div>
 
