added about, contacts, sponsors links and pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,12 @@
 <header>
   <div class="container">
-    <img src="/images/ninjacat_150.png">
+    <a href="/"><img src="/images/ninjacat_150.png"></a>
     <h1>Norfolk.js</h1>
     <h2>JavaScript meetup group in Norfolk, VA</h2>
+    <a href="/about/index.html">About Us</a>
+    <a href="/contact/index.html">Contact Us</a>
+    <a href="/sponsors/index.html">Our Awesome Sponsors</a>
   </div>
+
+
 </header>
