moved ./NorfolkJS to the right of ninjacat in header

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -44,9 +44,10 @@ header, footer {
 }
 
 header h1 {
+  display: inline;
   font-size: 30px;
   line-height: 1.5;
-  margin: 0 0 0 -40px;
+  margin: 0 0 0 0;
   font-weight: bold;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   color: #f0db4f;
