--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,4 @@
 <footer>
+  <h2>Norfolk.js &copy; 2014 all rights reserved.</h2>
+  <h2>Brought to you by <a href="humans.txt">proud ninjas</a>.</h2>
 </footer>
