--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -7,6 +7,7 @@
     <link rel="author" href="humans.txt" />
     <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="../stylesheets/pygment_trac.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="../stylesheets/ribbon.css" media="screen" />
 
     <title>{{page.title}}</title>
     <script>
@@ -21,7 +22,6 @@
   </head>
 
 <body>
-{% include ribbon.html %}
 {% include header.html %}
 
 <div class="container">
