--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<span id="forkongithub"><a href="https://github.com/codepo8/css-fork-on-github-ribbon">Fork me on GitHub</a></span>
+<span id="forkongithub"><a href="https://github.com/norfolkjs/norfolkjs.github.io">Fork me on GitHub</a></span>
 <header>
   <div class="container">
     <a href="../index.html"><img src="../images/ninjacat_150.png"></a>
