--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <span id="forkongithub"><a href="https://github.com/norfolkjs/norfolkjs.github.io">Fork me on GitHub</a></span>
 <header>
   <div class="container">
-    <a href="../index.html"><img src="../images/ninjacat_150.png"></a>
+    <a href="/index.html"><img src="/images/ninjacat_150.png"></a>
     <h1>Norfolk.js</h1>
     <h2>JavaScript meetup group in Norfolk, VA</h2>
-    <a href="../about/index.html">About Us</a>
-    <a href="../contact/index.html">Contact Us</a>
-    <a href="../sponsors/index.html">Our Awesome Sponsors</a>
+    <a href="/about/index.html">About Us</a>
+    <a href="/contact/index.html">Contact Us</a>
+    <a href="/sponsors/index.html">Our Awesome Sponsors</a>
   </div>
 </header>
