--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/ribbon.css" media="screen" />
 
     <title>{{page.title}}</title>
-    <script src="/javascripts/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
