align middle, patches #27

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,6 @@
   <h2>Norfolk.js &copy; 2014 all rights reserved.</h2>
   <h2>Brought to you by <a href="/humans.txt">proud ninjas</a>.</h2>
   <a href="https://affiliates.mozilla.org/referral/59113/">
-      <img src="/images/firefox.png" alt="">
+      <img src="/images/firefox.png" alt="firefox beta download" id="align">
   </a>
 </footer>
