--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -11,6 +11,8 @@
 
     <title>{{page.title}}</title>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://rawgit.com/moment/moment/develop/min/moment.min.js"></script>
+    <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.6.0/lang/en-gb.js"></script> -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
