--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -286,3 +286,15 @@ a {
   height: 50px;
   width: auto;
 }
+
+/***Events***/
+
+.events {
+  background-color: #000f0f;
+  padding: 10px;
+  margin: auto;
+  text-align: center;
+}
+.events a {
+  text-decoration: none;
+}
