refactoring the nav and changing the language

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,8 @@
     <h1>Norfolk.js</h1>
     <h2>JavaScript meetup group in Norfolk, VA</h2>
     <a href="/about/index.html">About Us</a>
+    <a href="/blog/index.html">Blog</a>
     <a href="/contact/index.html">Contact Us</a>
-    <a href="/sponsors/index.html">Our Awesome Sponsors</a>
+    <a href="/sponsors/index.html">Be a Sponsor</a>
   </div>
 </header>
