cleaning up css and events page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,6 @@
     <a href="/about/index.html">About Us</a>
     <a href="/blog/index.html">Blog</a>
     <a href="/contact/index.html">Contact Us</a>
-    <a href="/sponsors/index.html">Be a Sponsor</a>
+    <a href="/sponsors/index.html">Sponsors</a>
   </div>
 </header>
