--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -8,6 +8,26 @@ body {
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
 }
 
+/**
+  Links
+  a, a:hover, a:visited
+*/
+
+a {
+  color: #63c0f5;
+  text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  color: #f0db4f;
+  letter-spacing: -0.03em;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
+               0 0 5px rgba(181, 232, 83, 0.1),
+               0 0 10px rgba(181, 232, 83, 0.1);
+}
+
 /* General & 'Reset' Stuff */
 
 .container {
@@ -108,23 +128,13 @@ section img {
   max-width: 100%
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #f0db4f;
-  letter-spacing: -0.03em;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
-               0 0 5px rgba(181, 232, 83, 0.1),
-               0 0 10px rgba(181, 232, 83, 0.1);
-}
-
 /**
   H1 Header at the top of each page
 */
 #main_content h1 {
   font-size: 30px;
-  margin: 0 auto;
-  padding: 20px 0;
+  margin: 0 auto 20px auto;
+  padding: 0 0 20px 0;
   border-bottom: 1px dashed #e1ae45;
   text-align: center;
 }
@@ -252,14 +262,7 @@ hr {
   background: url("../images/blacktocat.png") 0 0 no-repeat;
 }
 
-/* Links
-   a, a:hover, a:visited
-*/
 
-a {
-  color: #63c0f5;
-  text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
-}
 
 /* Clearfix */
 
@@ -307,7 +310,7 @@ a {
 }
 
 .api_container .sponsors .logo {
-  margin-right: 20px;
-  height: 50px;
+  margin: 10px;
+  height: 100px;
   width: auto;
 }
