tweaks to sponsor image css

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -303,8 +303,7 @@ hr {
   background-color: #fff;
 }
 
-.api_container .sponsors .logo {
+.api_container .sponsors img {
   margin: 10px;
   height: 100px;
-  width: auto;
 }
