--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen" />
-
     <title>{{page.title}}</title>
+    <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-152x152-precomposed.png" />
+    <link rel="icon" href="favicon-096.png" />
+    <!--[if IE]><link rel="shortcut icon" href="favicon.ico" /><![endif]-->
+    <meta name="msapplication-TileColor" content="#fcda3e" />
+    <meta name="msapplication-TileImage" content="favicon-144-trans.png" />
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
       ga('create', 'UA-49239066-1', 'norfolkjs.org');
       ga('send', 'pageview');
     </script>
   </head>
-
-<body>
+  <body>
 
 {% include header.html %}
 
@@ -31,5 +32,5 @@
 
 {% include footer.html %}
 
-</body>
+  </body>
 </html>
