--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,12 +3,12 @@
   <div class="container">
     <a href="/index.html"><img src="/images/ninjacat_150.png"></a>
     <h1>Norfolk.js</h1>
-    <h2>JavaScript meetup group in Norfolk, VA</h2>
+    <h2>JavaScript User Group in Norfolk, VA</h2>
     <a href="/about/index.html">About Us</a>
     <a href="/index.html">Events</a>
     <a href="/blog/index.html">Blog</a>
-    <a href="/contact/index.html">Contact Us</a>
     <a href="/sponsors/index.html">Sponsors</a>
-    <a href="http://757dev.org">757Dev Slack</a>
+    <a href="/nodebots/index.html">NodeBots</a>
+    <a href="/contact/index.html">Contact Us</a>
   </div>
 </header>
