--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer>
-  <h2>Norfolk.js &copy; 2019 all rights reserved.</h2>
+  <h2>Norfolk.js &copy; <script>document.write(new Date().getFullYear())</script>
+    all rights reserved.</h2>
   <h2>Brought to you by <a href="/humans.txt">proud ninjas</a>.</h2>
 </footer>
