--- a/templates/default.html
+++ b/templates/default.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
 
-        <link rel="author" href="humans.txt" />
+        <link rel="author" href="about/people" />
         <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="/stylesheets/ribbon.css" media="screen" />
@@ -62,7 +62,7 @@
 
         <footer>
             <h2>Norfolk.js &copy; {{year}} all rights reserved.</h2>
-            <h2>Brought to you by <a href="/humans.txt">proud ninjas</a>.</h2>
+            <h2>Brought to you by <a href="/about/people">proud ninjas</a>.</h2>
         </footer>
     </body>
 </html>
