rewrite, needs doc

--- a/templates/default.html
+++ b/templates/default.html
@@ -9,15 +9,19 @@
         <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="/stylesheets/ribbon.css" media="screen" />
 
-        <title>{{page.title}}</title>
+        <title>Norfolk.js{{#if title}} - {{title}}{{/if}}</title>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script src="https://rawgit.com/moment/moment/develop/min/moment.min.js"></script>
 
         <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-152x152-precomposed.png" />
         <link rel="icon" href="favicon-096.png" />
         <!--[if IE]><link rel="shortcut icon" href="favicon.ico" /><![endif]-->
         <meta name="msapplication-TileColor" content="#fcda3e" />
         <meta name="msapplication-TileImage" content="favicon-144-trans.png" />
+        <meta
+            name="description"
+            content="Norfolk.js is a monthly meetup for JavaScript developers in the Norfolk, VA area."
+        />
+        <meta name="robots" content="index,follow" />
 
         <script>
             (function (i, s, o, g, r, a, m) {
