--- a/templates/default.html
+++ b/templates/default.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
 
-        <link rel="author" href="about/people" />
+        <link rel="author" href="/about/people" />
         <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="/stylesheets/ribbon.css" media="screen" />
@@ -12,9 +12,9 @@
         <title>Norfolk.js{{#if title}} - {{title}}{{/if}}</title>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-        <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-152x152-precomposed.png" />
-        <link rel="icon" href="favicon-096.png" />
-        <!--[if IE]><link rel="shortcut icon" href="favicon.ico" /><![endif]-->
+        <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-152x152-precomposed.png" />
+        <link rel="icon" href="/favicon-096.png" />
+        <!--[if IE]><link rel="shortcut icon" href="/favicon.ico" /><![endif]-->
         <meta name="msapplication-TileColor" content="#fcda3e" />
         <meta name="msapplication-TileImage" content="favicon-144-trans.png" />
         <meta
@@ -44,7 +44,7 @@
 
     <body>
         <span id="forkongithub"
-            ><a href="https://github.com/norfolkjs/norfolkjs.github.io">Fork me on GitHub</a></span
+            ><a href="/https://github.com/norfolkjs/norfolkjs.github.io">Fork me on GitHub</a></span
         >
         <header>
             <div class="container">
