--- a/templates/default.html
+++ b/templates/default.html
@@ -65,7 +65,7 @@
         </div>
 
         <footer>
-            <h2>Norfolk.js &copy; {{year}} all rights reserved.</h2>
+            <h2>Norfolk.js &copy; {{{dateFormat "YYYY"}}} all rights reserved.</h2>
             <h2>Brought to you by <a href="/about/people">proud ninjas</a>.</h2>
         </footer>
     </body>
