cleanup extract yelk

--- a/templates/default.html
+++ b/templates/default.html
@@ -19,7 +19,7 @@
         <meta name="msapplication-TileImage" content="favicon-144-trans.png" />
         <meta
             name="description"
-            content="Norfolk.js is a monthly meetup for JavaScript developers in the Norfolk, VA area."
+            content="Norfolk.js is a monthly meetup for JavaScript developers in the Norfolk and Virginia Beach, VA area."
         />
         <meta name="robots" content="index,follow" />
 
